fix(listing): add word break to comments so it doesn't stretch view port

--- a/src/app/widgets/item-view/item-view.component.scss
+++ b/src/app/widgets/item-view/item-view.component.scss
@@ -4,6 +4,7 @@
   border: 1px solid #fff;
   border-radius: 3px;
   background: #fff;
+  word-break: break-word;
 }
 
 .item-header {
